  slowed or sped up).

--Removed an error-prone initial mouse-warp-to-center call that was potentially
  causing future mouse motion events to be ignored.
  
--Fixed server typo that resulted in stolen paintings not being added to the
  robber's house (thanks Allen Trivette).

--Fixed TextField glitchy behavior when user types forbidden characters.

--Fixed major bug in path finding for family-blocked-in detection 
  (thanks Eric McQuiggan). 

--Fixed tool tip bug that triggered music toggle button tip spuriously 
  (thanks Garrett).

--Fixed so that empty self-test recordings (when user edits backpack but 
  not house map) do not replace last valid self-test recording in database.

--Fixed 'Family blocked in' message overlaying Done button on house load.

--Fixed dead wife sprites overhanging walls (and also moved all dead objects 
  under wall shadows, which looks much better).

--Added better logging of flush operations on server.

--Fixed lingering pitbull attack stance post-robbery.

--Fixed so that erase highlights (darkening) in editor match state of object 
  being erased.

--Changed so that picking up a family member who is standing with a mobile does
  not erase that mobile.

--Fixed so that dead wife not shown carrying money during self tests.

--Security tapes are now saved whenever a robber dies (so owners can see their 
  traps working).

--Added push-doors (thanks Nicholas Rodine).

--Tweaked window position to line up with push-doors.

--Fixed typing @ on Spanish keyboards (thanks Manuel Magalhaes).

--Fixed window title.

--Greatly improved seek/avoid mobile behavior so that they don't get stuck on 
  corners (thanks Nicholas Rodine).

--Added key repeat after holding movement key for 0.5+ seconds (to move across 
  house with less tedium than pressing [->] 32 times).

--Added 'Pick one:' to picker grids to make them less confusing (thanks 
  Madeleine Burleson).





Version 1    2013-January-25

Initial release to beta testers.